     This uses 'cp -plr' which is a gnu-ism
   * don't install dump-here.sh or dump-here.sh.8
   * Added debian/ dir so a .deb package can be build
     (cd debian ; dpkg-buildpackage -rfakeroot)
   * if you want /etc/rdup to be in a different directory be sure
     to use ./configure --sysconfdir=foo, otherwise it might not
     work


24 Sept 2006: 0.2.17 Miek <miek@miek.nl>
   -- non backwards compatible update + minor feature update --
   * rdup: fix compilation on Mac OS X (and prob. Solaris)
   * mirror.pl: remove the YYYYMM suffix for backup directory
   * mirror.sh: remove the YYYYMM suffix for backup directory
   * dump.sh will now add this YYYYMM suffix!
   * added rdup.cron example
   * added grep.pl, grep.pl.1 manual page
   * grep.pl/gzip.pl/crypt.pl: small refactoring to make them 
     smaller
   * sh-restore/ is REMOVED, there are now no special restore utils
   * Doc: moved all docs over to the perl versions of the utils.
   * Making backups with 0.2.17:
   	dump.sh -b /vol/backup/$HOSTNAME dir-to-back-up
	YYYYMM will be added

	mirror.pl will use the -b argument as-is, no magic
	there.
   * Restoring backups with 0.2.17:
   	resore.sh -b /tmp/RESTORE dir-to-restore

	and in /tmp/RESTORE you will find your restore


18 Sep 2006: 0.2.16 Miek <miek@miek.nl>
   -- bugfixes and moved to the perl utils --
   rdup:
   * some compilation updates for Solaris 10 (dirdf)
   * small documentation updates
   configure:
   * added check for GNU make (isn't used yet)
   scripts:
   * All sizes are report in MB
   * mirror.pl: major fixes: use the correct backup dir
     and correct -c.
     Allow multiple -b options to backup to different directories
     at the same time
     The -b argument is mandatory, but can now be given
     multiple times.
   * dump.sh: use the perl tools! Added -x option.
     The -b argument is mandatory, but can now be given
     multiple times.
     The $HOST directory isn't added by default! Now you need